added two variants with activity and view

--- a/app/src/main/res/layout/activity_animation.xml
+++ b/app/src/main/res/layout/activity_animation.xml
@@ -7,4 +7,10 @@
         android:layout_height="match_parent"
         tools:context=".AnimationActivity">
 
+    <ru.otus.animationexample.AnimatedView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+    </ru.otus.animationexample.AnimatedView>
+
 </android.support.constraint.ConstraintLayout>
