--- a/app/src/main/res/layout/animation_view.xml
+++ b/app/src/main/res/layout/animation_view.xml
@@ -7,12 +7,23 @@
        tools:parentTag="android.support.constraint.ConstraintLayout">
 
 
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" app:srcCompat="@mipmap/ic_launcher"
-            android:id="@+id/imageView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+   <android.support.constraint.ConstraintLayout
+           android:id="@+id/bottom_sheet"
+           xmlns:android="http://schemas.android.com/apk/res/android"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           xmlns:app="http://schemas.android.com/apk/res-auto"
+           android:background="@color/colorPrimary">
+
+      <android.support.v7.widget.AppCompatImageView
+              android:layout_width="100dp"
+              android:layout_height="100dp"
+              android:id="@+id/imageView"
+              app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+              android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+              app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+              app:layout_constraintBottom_toBottomOf="parent"/>
+
+   </android.support.constraint.ConstraintLayout>
 </merge>
