--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -5,6 +5,17 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
+
+    <TextView
+            android:text="@string/text_for_click"
+            android:layout_width="200dp"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+
     <ru.otus.animationexample.AnimatedView
             android:id="@+id/animatedView"
             android:layout_width="match_parent"
@@ -12,16 +23,22 @@
             android:visibility="gone">
 
     </ru.otus.animationexample.AnimatedView>
-    <Button
 
-            android:text="Button"
+    <android.support.design.widget.FloatingActionButton
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@android:drawable/ic_menu_myplaces"
+            android:id="@+id/button" android:layout_marginBottom="52dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="56dp"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
+    <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true" app:srcCompat="@android:drawable/ic_menu_preferences"
+            android:id="@+id/key_button" android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="40dp"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
 </merge>
